<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mqtt_test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	 <string name="menu_settings">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set URL</string>
    <string name="pref_user_name_summary">Set server URL</string>
    
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
</resources>
