<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="MQTT" >
        <EditTextPreference 
            	android:defaultValue="broker.hivemq.com"
            	android:title="@string/pref_user_name" 
            	android:summary="@string/pref_user_name_summary" 
            	android:key="mqttURL"/>
    </PreferenceCategory>
     <PreferenceCategory android:title="MQTT" >
        <EditTextPreference 
            	android:defaultValue="1883"
            	android:title="Enter port" 
            	android:summary="Enter your port" 
            	android:key="mqttPORT"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="MQTT" >
        <EditTextPreference 
            	android:defaultValue="elutopic1"
            	android:title="MQTT Topic" 
            	android:summary="enter your mqtt topic here" 
            	android:key="mqttTOPIC"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference> 

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary" 
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>